[gd_scene load_steps=4 format=3 uid="uid://krxs7wwfb2fu"]

[ext_resource type="Script" path="res://World/connector.gd" id="1_2sww1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ellh"]
size = Vector2(2, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8vi2h"]
size = Vector2(2, 20)

[node name="Connector" type="Node2D"]
script = ExtResource("1_2sww1")

[node name="LeftColorRect" type="ColorRect" parent="."]
z_index = 2
offset_left = -192.0
offset_top = -40.0
offset_right = -144.0
offset_bottom = 32.0
color = Color(0, 0, 0, 1)

[node name="LeftArea2D" type="Area2D" parent="LeftColorRect"]

[node name="LeftCollisionShape2D" type="CollisionShape2D" parent="LeftColorRect/LeftArea2D"]
position = Vector2(16, 32)
shape = SubResource("RectangleShape2D_5ellh")

[node name="RightColorRect" type="ColorRect" parent="."]
z_index = 2
offset_left = 160.0
offset_top = -40.0
offset_right = 208.0
offset_bottom = 32.0
color = Color(0, 0, 0, 1)

[node name="RightArea2D" type="Area2D" parent="RightColorRect"]
position = Vector2(0, 4)

[node name="RightCollisionShape2D" type="CollisionShape2D" parent="RightColorRect/RightArea2D"]
position = Vector2(32, 28)
shape = SubResource("RectangleShape2D_8vi2h")

[connection signal="body_entered" from="LeftColorRect/LeftArea2D" to="." method="_on_left_area_2d_body_entered"]
[connection signal="body_exited" from="LeftColorRect/LeftArea2D" to="." method="_on_left_area_2d_body_exited"]
[connection signal="body_entered" from="RightColorRect/RightArea2D" to="." method="_on_right_area_2d_body_entered"]
[connection signal="body_exited" from="RightColorRect/RightArea2D" to="." method="_on_right_area_2d_body_exited"]
